# music-store

./: .gitignore  README.md  chinook.db  example-db-import.ipynb
.claude/: CLAUDE.md  database-schema.md  implementation-plan.md  langgraph-music-store-plan.md  project-status.md  work-summary.md
.claude/commands/: update-summary.md
agent/: chinook.db  langgraph.json  pyproject.toml
agent/src/: agent.py  auth.py  db.py  state.py  utils.py
agent/src/nodes/: __init__.py  customer_agent.py  employee_agent.py  recommendation_agent.py  supervisor.py
agent/src/tools/: __init__.py  customer_tools.py  employee_tools.py  recommendation_tools.py
streamlit_app/: app.py  requirements.txt
streamlit_app/.streamlit/: config.toml
