[project]
name = "music-store-agent"
version = "0.1.0"
description = "Multi-agent music store demo"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-sdk>=0.1.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
